# nelchan

./: .dockerignore  .gcloudignore  .gitignore  .pylintrc  Dockerfile  Dockerfile.dev  Makefile  README.md  cloudbuild.yaml  docker-compose.yaml  pyproject.toml
cmd/: dev.py  prod.py
docker/: Dockerfile
nelchan/: __init__.py
nelchan/adapter/repository_impl/: __init__.py  guild.py  log.py  topic_ch.py  word.py
nelchan/app/: nelchan.py
nelchan/bot/: __init__.py  nelchan.py
nelchan/bot/cogs/: create_category.py  dictionary.py  ready.py  topic_ch.py  topic_channel.py
nelchan/domain/model/: __init__.py  guild.py  log.py  topic_ch.py  word.py
nelchan/domain/repository/: __init__.py  guild.py  log.py  topic_ch.py  word.py
nelchan/error/: repository.py
nelchan/infrasturcture/: firestore.py  mongo.py
nelchan/presenter/: __init__.py  dictionary_presenter.py
nelchan/usecase/inputport/: __init__.py  dictionary_usecase.py  personal_ch_usecase.py  topic_ch_usecase.py
nelchan/usecase/interactor/: __init__.py  dictionary_interactor.py  personal_ch_interactor.py  topic_ch_interactor.py
nelchan/usecase/outputport/: __init__.py  dictionary_outputport.py  personal_ch_outputport.py  topic_ch_outputport.py
nelchan/usecase/presenter/: __init__.py  dictionary_presenter.py  personal_ch_presenter.py  topic_ch_presenter.py
scripts/: new_command.py
scripts/templates/: interactor.py.template  outputport.py.template  presenter.py.template  usecase.py.template
